tests/Unit/PHPStan/Rules/Naming/Fixtures/TypeSuffixMismatch/Valid/EdgeCases/TemplateHierarchy/GenericConnectionInterface.php
<?php

declare(strict_types=1);

namespace TypeSuffixMismatchFixtures\Valid\EdgeCases\TemplateHierarchy;

/**
 * @template TConnection of object
 */
interface GenericConnectionInterface
{
}
